--- a/Examenesinternacionales.html
+++ b/Examenesinternacionales.html
@@ -10,6 +10,8 @@
         <title>Exámenes internacionales-Según tu nivel</title> 
         <link rel="stylesheet" href="Bootstrap/bootstrap-4.6.0-dist/css/bootstrap.css">
         <link rel="stylesheet" href="SASS/css/prueba.css"/>
+        <link rel="stylesheet" href="SASS/css/prueba.css"/>
+        <link rel="preload" href="styles.css" as="style">
          <!-- Fuentes y animaciones-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Cabin+Sketch&family=Fredericka+the+Great&family=Love+Ya+Like+A+Sister&family=Mali:wght@700&family=Open+Sans:wght@300;400&family=Quicksand:wght@600&display=swap" rel="stylesheet">
