--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <title>Inicio-Escuela de inglés</title> 
         <link rel="stylesheet" href="Bootstrap/bootstrap-4.6.0-dist/css/bootstrap.css">
         <link rel="stylesheet" href="SASS/css/prueba.css"/>
+        <link rel="preload" href="styles.css" as="style">
          <!-- Fuentes y animaciones-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Cabin+Sketch&family=Fredericka+the+Great&family=Love+Ya+Like+A+Sister&family=Mali:wght@700&family=Open+Sans:wght@300;400&family=Quicksand:wght@600&display=swap" rel="stylesheet">
@@ -75,14 +76,14 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="Imagenes/london01.png (1).webp" class="d-block w-100" alt="Londres"border="0">
+                <img src="https://i.ibb.co/vQqbLtC/london01-png.jpg" class="d-block w-100" alt="Londres"border="0">
                 <div class="carousel-caption d-none d-md-block">
                   <h5><span class="sliderResaltado">Cursos en el exterior</span></h5>
                   <p><span class="sliderResaltado">Podrás viajar con tus compañeros para aprender inglés y conocer un nuevo lugar.</span></p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="Imagenes/aulaniñas.png.webp" class="d-block w-100" alt="Niñas" border="0">
+                <img src="https://i.ibb.co/cJJgqtK/aulani-as-png.jpg" class="d-block w-100" alt="Niñas" border="0">
                 <div class="carousel-caption d-none d-md-block">
                   <h5><span class="sliderResaltado">Clases para todos los niveles</span></h5>
                   <p><span class="sliderResaltado">Contamos con diferentes niveles para que puedas aprender y divertirte.</span></p>
