--- a/masservicios.html
+++ b/masservicios.html
@@ -8,12 +8,14 @@
         <meta name= "description" content="Es una academia de inglés para niños y jóvenes donde aprenderán a través de actividades lúdicas. También contamos con cursos en el exterior y preparación de exámenes.">
         <!--Este es el final de las etiquetas Meta-->
         <title>Más servicios-Exámenes internacionales y cursos en el exterior</title> 
+        <link rel="stylesheet" href="SASS/css/prueba.css"/>
+        <link rel="preload" href="styles.css" as="style">
         <!-- Fuentes-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Cabin+Sketch&family=Fredericka+the+Great&family=Love+Ya+Like+A+Sister&family=Mali:wght@700&family=Open+Sans:wght@300;400&family=Quicksand:wght@600&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="SASS/css/prueba.css"/>
+        
         
     </head>
     <body>
