--- a/niveles.html
+++ b/niveles.html
@@ -94,7 +94,7 @@
             </div> 
         <!--Final de Tabla de niveles--> 
            <section class="textoNiveles">
-               <p class="textoNiveles__parrafo">No dudes en consultarnos y te asesoraremos para que estés en el nivel indicado.<br>¡Las clases tienen un máximo 7 alumnos para que sean más personalizadas y efectivas!</p>
+               <p class="textoNiveles__parrafo">No dudes en consultarnos y te asesoraremos para que estés en el nivel indicado.<br>¡Las clases tienen un máximo de 7 alumnos para que sean más personalizadas y efectivas!</p>
            </section>
            <div class="btnInscripcion">  
             <a href=contacto.html><button type="button" class="btn btn-outline-success btnInscripcion__niveles">¡Me quiero inscribir!</button></a>
