--- a/niveles.html
+++ b/niveles.html
@@ -10,7 +10,6 @@
         <title>Niveles-De 4 a 16 años</title> 
         <link rel="stylesheet" href="Bootstrap/bootstrap-4.6.0-dist/css/bootstrap.css">
         <link rel="stylesheet" href="SASS/css/prueba.css"/>
-        <link rel="stylesheet" href="SASS/css/prueba.css"/>
         <link rel="preload" href="styles.css" as="style">
          <!-- Fuentes y animaciones-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -26,6 +25,7 @@
             <a class="navbar-brand" href="index.html"><img src="Imagenes/logo4.png.png" alt="HappyNewlang" width="200px"></a>
               
           </div>
+          <!--Este es el comienzo del Nav -->  
           <nav class="navbar navbar-expand-lg navbar-light col-12 shadow colorNav">
             <div class="container-fluid">
               <div class="row">
