--- a/contacto.html
+++ b/contacto.html
@@ -10,9 +10,8 @@
         <title>Contacto-Ubicación y formulario</title> 
         <link rel="stylesheet" href="Bootstrap/bootstrap-4.6.0-dist/css/bootstrap.css">
         <link rel="stylesheet" href="SASS/css/prueba.css"/>
-        <link rel="stylesheet" href="SASS/css/prueba.css"/>
         <link rel="preload" href="styles.css" as="style">
-         <!-- Fuentes y animaciones-->
+         <!-- Fuentes-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Cabin+Sketch&family=Fredericka+the+Great&family=Love+Ya+Like+A+Sister&family=Mali:wght@700&family=Open+Sans:wght@300;400&family=Quicksand:wght@600&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,6 +26,7 @@
             <a class="navbar-brand" href="index.html"><img src="Imagenes/logo4.png.png" alt="HappyNewlang" width="200px"></a>
               
           </div>
+            <!--Este es el comienzo del Nav -->
           <nav class="navbar navbar-expand-lg navbar-light col-12 shadow colorNav">
             <div class="container-fluid">
               <div class="row">
@@ -117,7 +117,7 @@
                
                 <div id="margenMapa">
                     <h2 id="ubicacion"><span class="tituloResaltado">Nuestra ubicación</span><img src="Imagenes/ubicacion.png" alt="direccion" width="60px"></h2>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210147.3970706404!2d-58.57338436212408!3d-34.615461118227664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1617646749566!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe title="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210147.3970706404!2d-58.57338436212408!3d-34.615461118227664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1617646749566!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
 
