--- a/cursosenelexterior.html
+++ b/cursosenelexterior.html
@@ -10,9 +10,8 @@
         <title>Cursos en el exterior-Viaja y aprende</title> 
         <link rel="stylesheet" href="Bootstrap/bootstrap-4.6.0-dist/css/bootstrap.css">
         <link rel="stylesheet" href="SASS/css/prueba.css"/>
-        <link rel="stylesheet" href="SASS/css/prueba.css"/>
         <link rel="preload" href="styles.css" as="style">
-         <!-- Fuentes y animaciones-->
+         <!-- Fuentes-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Cabin+Sketch&family=Fredericka+the+Great&family=Love+Ya+Like+A+Sister&family=Mali:wght@700&family=Open+Sans:wght@300;400&family=Quicksand:wght@600&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
@@ -27,6 +26,7 @@
             <a class="navbar-brand" href="index.html"><img src="Imagenes/logo4.png.png" alt="HappyNewlang" width="200px"></a>
               
           </div>
+            <!--Este es el comienzo del Nav -->
           <nav class="navbar navbar-expand-lg navbar-light col-12 shadow colorNav">
             <div class="container-fluid">
               <div class="row">
